--- a/quiz-core/pom.xml
+++ b/quiz-core/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>spring-orm</artifactId>
             <version>6.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.inject</groupId>
+            <artifactId>jakarta.inject-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
 
     </dependencies>
 
