--- a/training-exam/pom.xml
+++ b/training-exam/pom.xml
@@ -4,22 +4,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>fr.epita</groupId>
-    <artifactId>homework-prep</artifactId>
+
     <version>1.0.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>quiz-core</module>
-        <module>quiz-rest-httpserver</module>
-        <module>junit-spring-module</module>
-        <module>training-exam</module>
-        <module>quiz-rest-spring-boot</module>
-    </modules>
+    <groupId>fr.epita.java</groupId>
+    <artifactId>training-exam</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
